2017-03-17  JMB  Dynamically update fullscreen action text

    The fullscreen action now changes the text in menus and tooltips
    appropriately after it has been activated (to say "Exit Fullscreen"
    instead of "Fullscreen", etc.).  Additionally, I'd overlooked that
    a small checkbox was been shown next to the text in the menu on
    Android devices; suppressed that now that the action's text is
    more appropriate.

2017-03-16  JMB  Updated source code documentation

    Upgraded Doxygen and its configuration files, and fixed some problems
    it found with the source code documentation comments.

2017-03-11  JMB  Added Android port

    Added support for running PortaBase on Android 4.4 (KitKat) and above.
    It works well enough for my own daily use, but I want to go through
    a short beta testing period before releasing it to the app store; let
    me know if you're interested in trying it out and providing feedback.

2017-02-04  JMB  Upgraded Metakit to 2.4.9.8

    Updated the bundled version of Metakit to the latest code from GitHub
    (this fixes a problem with compiling it for Android).

2017-01-16  JMB  More translation file updates

    My last pull of updated translations from Transiex missed some of the
    recent updates to existing translations.  Everything that's been
    translated there should now also be in the source code.

2017-01-11  JMB  Better alternating row color defaults, CSV enums import

    The background colors for alternate rows in the data viewer and
    other grids had been defaulting to white and light gray, but now
    use the appropriate colors from the current native theme unless other
    values have been specified.  Similarly, the row viewer had been
    hardcoded to use light gray as the alternate row background color,
    but the color from the preferences dialog is now used.  There is also
    now a "Reset" button in the dialog to revert to the current system
    default colors.
